/*
 * $Id: ChangeLog,v 1.265 2002/06/10 20:07:45 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-06-12 04:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/fm.c
    * Minor refinment of error messages in hb_xfree()

  * source/vm/arrays.c
    ! Minor optimization to hb_arrayFill()

  * source/vm/arrayshb.c
    + Added new ArrayToStructure()
    + Added new StructureToArray()

  + include/cstruct.ch
  + source/rtl/cstruct.prg
    + New C STRUCTURE support.

  + tests/tstcstru.prg
    + Sample test to demonstrate new C STRUCTURE support.

  * makefile.bc
  * makefile.vc
  * source/rtl/Makefile
    + Added new cstruct.prg to make files.

2002-06-10 13:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Reverted recent fix in TestOptional() untim more complete fix.

   * tests/pp.prg
     ! Fixed minor bug in MatchRule()

2002-06-08 14:51 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/hbrddcdx.h
   * source/rdd/dbfcdx/dbfcdx2.h
   * source/rdd/dbfcdx/dbfcdx1.c
     + added hb_cdxOrderDestroy, hb_cdxIndexDelTag functions,
       ordDestroy() is working now for dbfcdx rdd.

2002-06-07 12:20 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/gtwin/gtwin.c
    ! Removed Clipper-incompatible change that made Shift+ESC
      return 641 instead of 27 in normal keyboard input mode,
      instead of only returning 641 in HB_INKEY_EXTENDED mode.
      by David G. Holm

2002-06-07 12:15 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tgetlist.prg
  * source/rtl/getsys.prg
    ! Modification of work for save oGetList active.
      Save oGetList for recursives calls to ReadModal().
      Necessary to support post-evaluation functions
      to the exit of the ReadModal().
      eg: UPDATE()

2002-06-06 11:36 UTC-0300 Walter Negro <anegro@overnet.com.ar>