@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.265 2002/06/10 20:07:45 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.266 2002/06/12 11:53:05 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-06-13 19:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * source/rtl/console.c
+    * Minor fix for hb_conDevPos()
 
 2002-06-12 04:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/fm.c
